# CMakeWithPythonPackage

./: .gitignore  CMakeLists.txt  requirements.txt
.github/workflows/: linux_package.yml  linux_test.yml  package.yml  package.yml.disabled  test.yml
python_gui/: gui.py
